--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,13 +1,12 @@
+html, body {
+  height: 100vh;;
+  overflow: hidden;
+}
+
 body {
-  min-height: 100vh;
-  color: rgba(235, 235, 235, 0.64);
-  background: #181818;
+  /* color: rgba(235, 235, 235, 0.64); */
+  /* color: white; */
+  /* background: #181818; */
+  overflow-y: auto;
   transition: color 0.5s, background-color 0.5s;
-  line-height: 1.6;
-  font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-    Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  font-size: 15px;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
